--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,5 +7,15 @@
   background: rgba(255, 255, 255, 0.3);
 }
 
-.site-layout .site-layout-background {
+.login-form {
+  max-width: 300px;
+}
+ .login-form-forgot {
+  float: right;
+}
+.ant-col-rtl .login-form-forgot {
+  float: left;
+}
+ .login-form-button {
+  width: 100%;
 }
